testsuite/tests/parser/should_fail/readFail043.stderr

readFail043.hs:9:9: [GHC-42026] error:
    Unexpected transform statement in a list comprehension
    Suggested fix: Perhaps you intended to use TransformListComp

readFail043.hs:9:9: [GHC-42026] error:
    Unexpected transform statement in a list comprehension
    Suggested fix: Perhaps you intended to use TransformListComp

readFail043.hs:9:9: [GHC-42026] error:
    Unexpected transform statement in a list comprehension
    Suggested fix: Perhaps you intended to use TransformListComp
